# CutFEMx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  VERSION.cmake  pyproject.toml
.github/workflows/: docs.yml  linux.yml
cpp/: CMakeLists.txt  CUTFEMXConfig.cmake.in
cpp/cutfemx/: CMakeLists.txt  version.h.in
cpp/cutfemx/basix_wrapper/: CMakeLists.txt  cwrapper.cpp  cwrapper.h
cpp/cutfemx/cut/: CMakeLists.txt  cut.cpp  cut.h  runtime_quadrature.h
cpp/cutfemx/distance/: CMakeLists.txt  eikonal_update.h  fast_iterative.h  normal_extension.h  parallel_exchange.h  point_triangle_distance.h  reinitialize.h  sign.h  sign_options.h  sign_region.h  vertex_map.h  winding.h
cpp/cutfemx/distance/stl/: cell_triangle_map.h  distribute.h  mesh_adapt.h  mp_predicates.h  orient_surface.h  reader.h  surface.h  tri_intersection.h
cpp/cutfemx/extensions/: CMakeLists.txt  cell_aggregation.cpp  cell_aggregation.h  cell_root_mapping.h  discrete_extension.h  dof_basis_evaluation.h  dof_root_mapping.h  extension_penalty.cpp  extension_penalty.h  matrix_operations.h
cpp/cutfemx/fem/: CMakeLists.txt  CutForm.h  assemble_matrix.h  assemble_scalar.h  assemble_vector.h  assembler.h  deactivate.h  entity_dofmap.cpp  entity_dofmap.h  generate_tables.h  interpolate.h  pack_coefficients.h  petsc.h  typedefs.h
cpp/cutfemx/geometry/: CMakeLists.txt  conormal.h  correction_distance.h  surface_normal.h
cpp/cutfemx/level_set/: CMakeLists.txt  band_selection.h  compute_normal.h  cut_entities.cpp  cut_entities.h  eikonal_update.h  fmm.h  geom_map.h  ghost_penalty_facets.h  locate_entities.cpp  locate_entities.h  normal.h  parallel_min_exchange.h  pt_tri_distance.h  reinit.h  sign.h  sign_options.h  sign_region.h  value.h  vertex_graph.h  winding.h
cpp/cutfemx/mesh/: CMakeLists.txt  cell_triangle_map.h  convert.h  create_mesh.cpp  create_mesh.h  cut_mesh.h  mp_predicates.h  stl_reader.h  stl_surface.h
cpp/cutfemx/mesh/stl/: cell_triangle_map.h  distribute_stl.h  mesh_adapt_stl.h  orient_surface.h  stl_reader.h  stl_surface.h  tri_intersection.h
cpp/cutfemx/mesh_cutter/: CMakeLists.txt  MeshCutter.cpp  MeshCutter.h
cpp/cutfemx/quadrature/: CMakeLists.txt  generation.h  geometry.h  physical_points.h  quadrature.h
cpp/demo/cell_triangle_map/: CMakeLists.txt  generate_sphere.py  main.cpp  sphere.stl
cpp/demo/custom_tabulate_tensor/: CMakeLists.txt  main.cpp  scalar.py
cpp/demo/custom_tabulate_tensor/scalar/: CMakeLists.txt  main.cpp  scalar.py
cpp/demo/cut_form_assembly/: CMakeLists.txt  main.cpp  scalar.py
cpp/demo/cut_mesh/: CMakeLists.txt  main.cpp
cpp/demo/fmm_distance/: CMakeLists.txt  generate_sphere.py  main.cpp  sphere.stl
cpp/demo/matrix_operations/: CMakeLists.txt  README.md  matrix_operations_demo.cpp
cpp/demo/runtime_quadrature/: CMakeLists.txt  main.cpp
cpp/dolfinx_custom_data/: README.md
cpp/dolfinx_custom_data/fem/: Form.h  assemble_matrix_impl.h  assemble_scalar_impl.h  assemble_vector_impl.h  assembler.h  forward.h  pack_form.h
cpp/tests/: CMakeLists.txt  main.cpp  scalar.py  test.cpp  test_cell_triangle_map.cpp  test_distribute_stl_facets.cpp  test_orient_surface.cpp
docs/: Makefile  _mock_imports.py  build_docs.sh  conf.py  index.md  index.rst  requirements.txt  stl_distance.md
docs/_static/: custom_pydata.css  custom_pydata.js
docs/_static/tutorials/: dg-poisson-quadrature-view.html  interface-poisson-solution-view.html  poisson-quadrature-view.html  poisson-solution-view.html
docs/_templates/: global-sidebar.html
docs/examples/: boundary-perimeter.md  dg-poisson.md  index.md  interface-poisson.md  poisson.md  stl-distance.md  stokes.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/tutorials/: boundary-perimeter.md  dg-poisson.md  elasticity.md  index.md  interactive-visualizations.md  interface-poisson.md  make_pyvista_scenes.py  moving-poisson.md  poisson.md  stl-distance.md  stokes.md  surface-poisson-dg.md
docs/user-guide/: boundary-conditions.md  cut-meshes.md  dof-constraints.md  element-classification.md  index.md  level-sets.md  quadrature.md  stabilization.md  visualization.md
img/: cutfemx_logo_cropped.xcf
python/: CMakeLists.txt  build-requirements.txt  pyproject.toml
python/cutfemx/: __init__.py  _runintgen_adapter.py  _version.py  _version.py.in  cut.py  distance.py  extensions.py  fem.py  level_set.py  mesh.py  mesh_cutter.py  petsc.py  quadrature.py
python/cutfemx/wrappers/: __init__.py  cut.cpp  cut_function.cpp  cutfemx.cpp  distance.cpp  extensions.cpp  fem.cpp  level_set.cpp  mesh.cpp  mesh_cutter.cpp  petsc.cpp  petsc_runtime.cpp  quadrature.cpp
python/demo/: Dino.stl  _pyvista_solution_plot.py  demo_badly_cut_identification.py  demo_boundary_sphere_perimeter.py  demo_circle_convergence.py  demo_circle_redistance.py  demo_compliance_optimization.py  demo_constraint_application.py  demo_constraint_summary.py  demo_cut_poisson.py  demo_cut_poisson_petsc.py  demo_dg_poisson.py  demo_dof_basis_evaluation.py  demo_dof_root_visualization.py  demo_elasticity.py  demo_extension_operators.py  demo_interface_poisson.py  demo_locate_entities.py  demo_moving_poisson.py  demo_poisson.py  demo_poisson_extension_penalty_study.py  demo_redistancing.py  demo_reinit.py  demo_reinit_parabolic.py  demo_runtime_assembler.py  demo_runtime_quadrature.py  demo_stl_distance.py  demo_stokes.py  demo_surface_poisson_dg.py
python/tests/: quadrature_utils.py  test_adapt_mesh_to_stl.py  test_assembly_elasticity.py  test_assembly_poisson.py  test_assembly_stokes.py  test_complex_assembly.py  test_cut_api.py  test_cut_poisson_circle.py  test_cutdg_poisson_convergence.py  test_distance.py  test_extensions_cell_aggregation.py  test_locate_entities.py  test_mesh_cutter.py  test_petsc.py
